Sprite netsync purge (1st wave) (#6557)

--- a/Resources/Prototypes/Entities/Objects/Tools/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/tools.yml
@@ -122,6 +122,7 @@
   - type: Sprite
     sprite: Objects/Tools/crowbar.rsi
     state: icon
+    netsync: false
   - type: Item
     sprite: Objects/Tools/crowbar.rsi
     size: 10
