--- a/Resources/Prototypes/Entities/Structures/Piping/Disposal/pipes.yml
+++ b/Resources/Prototypes/Entities/Structures/Piping/Disposal/pipes.yml
@@ -8,6 +8,8 @@
     snap:
     - Disposal
   components:
+  - type: Sprite
+    netsync: false
   - type: SubFloorHide
   - type: Clickable
   - type: InteractionOutline
