--- a/Resources/Prototypes/Entities/Structures/Furniture/chairs.yml
+++ b/Resources/Prototypes/Entities/Structures/Furniture/chairs.yml
@@ -22,6 +22,7 @@
   - type: Sprite
     sprite: Structures/Furniture/chairs.rsi
     noRot: true
+    netsync: false
   - type: Strap
     position: Stand
     buckleOffset: "0,0.15"
