--- a/Resources/Prototypes/Entities/Objects/Consumable/drinks.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/drinks.yml
@@ -2101,9 +2101,12 @@
           Quantity: 30
   - type: Sprite
     sprite: Objects/Consumable/Drinks/ramen.rsi
+  - type: Tag
+    tags:
+    - Trash
 
 - type: entity
-  parent: DrinkGlassBase
+  parent: DrinkRamen
   id: DrinkHellRamen
   name: hell ramen
   description: Just add 10ml water, self heats! Super spicy flavor.
@@ -2117,5 +2120,4 @@
           Quantity: 30
         - ReagentId: CapsaicinOil
           Quantity: 5
-  - type: Sprite
-    sprite: Objects/Consumable/Drinks/ramen.rsi
+          
