command decal color (#6598)

--- a/Resources/Prototypes/Palettes/departmental.yml
+++ b/Resources/Prototypes/Palettes/departmental.yml
@@ -2,7 +2,8 @@
   id: Departmental
   name: Departmental
   colors:
-    command: "#52B4E996"
+    command: "#334E6DC8"
+    medical: "#52B4E996"
     service: "#9FED5896"
     engineering: "#EFB34196"
     security: "#DE3A3A96"
