Puddle Evaporation Fix (#6584)

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -365,7 +365,7 @@
         - ReagentId: JuiceTomato
           Quantity: 10
   - type: Evaporation
-    lowerLimit: 2
+    lowerLimit: 0 # todo: reimplement stain behaviour, ideally in a way that doesn't use evaporation lowerLimit
   - type: Appearance
     visuals:
     - type: PuddleVisualizer
