--- a/Resources/Prototypes/Reagents/gases.yml
+++ b/Resources/Prototypes/Reagents/gases.yml
@@ -101,6 +101,11 @@
     Gas:
       effects:
       - !type:HealthChange
+        conditions:
+        # Don't want people to get toxin damage from the gas they just
+        # exhaled, right?
+        - !type:ReagentThreshold
+          min: 0.5
         scaleByQuantity: true
         ignoreResistances: true
         damage:
