--- a/Resources/Prototypes/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/toys.yml
@@ -61,7 +61,10 @@
       path: /Audio/Items/Toys/weh.ogg
   - type: EmitSoundOnLand
     sound:
-       path: /Audio/Items/Toys/weh.ogg
+      path: /Audio/Items/Toys/weh.ogg
+  - type: EmitSoundOnActivate
+    sound:
+      path: /Audio/Items/Toys/weh.ogg
   - type: UseDelay
     delay: 1.0
 
