Tritium atmos warning sign (#6657)

--- a/Resources/Prototypes/Entities/Structures/Wallmounts/Signs/signs.yml
+++ b/Resources/Prototypes/Entities/Structures/Wallmounts/Signs/signs.yml
@@ -813,6 +813,15 @@
   components:
   - type: Sprite
     state: atmos_plasma
+    
+- type: entity
+  parent: BaseSign
+  id: WarningTritium
+  name: tritium waste sign
+  description: WARNING! Tritium flow tube. Ensure the flow is disengaged before working.
+  components:
+  - type: Sprite
+    state: atmos_tritium
 
 - type: entity
   parent: BaseSign
