Access groups + aghost all access (#6671)

--- a/Resources/Prototypes/Access/command.yml
+++ b/Resources/Prototypes/Access/command.yml
@@ -7,3 +7,10 @@
 - type: accessLevel
   id: HeadOfPersonnel
   name: Head of Personnel
+
+- type: accessGroup
+  id: Command
+  tags:
+  - Command
+  - Captain
+  - HeadOfPersonnel
