--- a/Resources/Prototypes/Access/service.yml
+++ b/Resources/Prototypes/Access/service.yml
@@ -18,3 +18,14 @@
 
 - type: accessLevel
   id: Chapel
+
+- type: accessGroup
+  id: Service
+  tags:
+  - Bar
+  - Kitchen
+  - Hydroponics
+  - Service
+  - Janitor
+  - Theatre
+  - Chapel
