--- a/Resources/Prototypes/Roles/Jobs/Command/captain.yml
+++ b/Resources/Prototypes/Roles/Jobs/Command/captain.yml
@@ -10,38 +10,8 @@
   joinNotifyCrew: true
   supervisors: "Nanotrasen officials"
   canBeAntag: false
-  access:
-  # All of em.
-  # Could probably do with some kind of wildcard or whatever to automate this.
-  # HELL FUCKING YEAH WE COULD
-  # Guys please don't fight
-  # Seriously though...
-  - Captain
-  - HeadOfPersonnel
-  - ChiefEngineer
-  - ChiefMedicalOfficer
-  - HeadOfSecurity
-  - ResearchDirector
-  - Command
-  - Security
-  - Armory
-  - Brig
-  - Engineering
-  - Medical
-  - Quartermaster
-  - Salvage
-  - Cargo
-  - Research
-  - Service
-  - Maintenance
-  - External
-  - Janitor
-  - Theatre
-  - Bar
-  - Chemistry
-  - Kitchen
-  - Chapel
-  - Hydroponics
+  accessGroups:
+  - AllAccess
 
 - type: startingGear
   id: CaptainGear
