--- a/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
@@ -347,28 +347,8 @@
     jobTitle: Central Commander
   - type: Access
     #GOD DEAR FUCKING GOD WE NEED AN ALL-ACCESS FLAG
-    tags:
-    - Maintenance
-    - Cargo
-  #  - Quartermaster
-    - Engineering
-  #  - ChiefEngineer
-    - Medical
-  #  - ChiefMedicalOfficer
-    - Research
-  #  - ResearchDirector
-    - Security
-    - Service
-    - Captain
-    - Command
-    - External
-    #- HeadOfSecurity
-    - HeadOfPersonnel
-    - Bar
-    #- Hydroponics
-    #- Kitchen
-    - Janitor
-    - Theatre
+    groups:
+    - AllAccess
 
 - type: entity
   parent: IDCardStandard
