Drone hat simulator (#6644)

--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -64,6 +64,13 @@
       - id: PowerDrill
       - id: JawsOfLife
       - id: WelderExperimental
+  - type: Inventory
+    templateId: drone
+  - type: Strippable
+  - type: UserInterface
+    interfaces:
+    - key: enum.StrippingUiKey.Key
+      type: StrippableBoundUserInterface
   - type: GhostTakeoverAvailable
     makeSentient: true
     name: Maintenance Drone
@@ -86,6 +93,9 @@
     layers:
     - state: shell
       sprite: Mobs/Silicon/drone.rsi
+    - map: [ "head" ]
+      offset: 0, -0.45
+      rotateOffset: false
   - type: Fixtures
     fixtures:
     - shape:
