--- a/Resources/Prototypes/Entities/Objects/Fun/instruments.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/instruments.yml
@@ -4,6 +4,8 @@
   id: BaseHandheldInstrument
   description: That's an instrument.
   components:
+  - type: Sprite
+    netsync: false
   - type: Instrument
   - type: ActivatableUI
     inHandsOnly: true
