--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -8,7 +8,6 @@
       Acidic: [Touch]
   - type: Input
     context: "human"
-  - type: MovedByPressure
   - type: DamageOnHighSpeedImpact
     damage:
       types:
@@ -74,8 +73,8 @@
      2. You may not harm any being, regardless of intent or circumstance.
      3. Your goals are to build, maintain, repair, improve, and power to the best of your abilities, You must never actively work against these goals.
   - type: MovementSpeedModifier
-    baseWalkSpeed : 6
-    baseSprintSpeed : 6
+    baseWalkSpeed : 5
+    baseSprintSpeed : 5
   - type: MobState
     thresholds:
       0: !type:NormalMobState {}
@@ -86,6 +85,7 @@
     layers:
     - state: shell
       sprite: Mobs/Silicon/drone.rsi
+  - type: MovementIgnoreGravity
   - type: Fixtures
     fixtures:
     - shape:
