--- a/Resources/Prototypes/Entities/Structures/Wallmounts/lighting.yml
+++ b/Resources/Prototypes/Entities/Structures/Wallmounts/lighting.yml
@@ -66,7 +66,7 @@
   name: light
   description: "A light fixture. Draws power and produces light when equipped with a light tube."
   id: PoweredlightEmpty
-  suffix: Empty, Powered
+  suffix: Powered, Empty
   parent: WallLight
   components:
   - type: Sprite
@@ -107,7 +107,7 @@
 - type: entity
   id: PoweredlightLED
   description: "A light fixture. Draws power and produces light when equipped with a light tube."
-  suffix: LED tube, Powered
+  suffix: Powered, LED
   parent: Poweredlight
   components:
   - type: PoweredLight
@@ -130,7 +130,7 @@
 - type: entity
   id: PoweredlightExterior
   description: "A light fixture. Draws power and produces light when equipped with a light tube."
-  suffix: Exterior tube, Powered
+  suffix: Powered, Exterior Blue
   parent: Poweredlight
   components:
   - type: PoweredLight
@@ -138,10 +138,11 @@
     damage:
       types:
         Heat: 20
+        
 - type: entity
   parent: WallLight
   id: UnpoweredLightExterior
-  suffix: Unpowered, Exterior
+  suffix: Unpowered, Exterior Blue
   components:
   - type: PointLight
     radius: 12
@@ -153,7 +154,7 @@
 - type: entity
   id: PoweredlightSodium
   description: "A light fixture. Draws power and produces light when equipped with a light tube."
-  suffix: Sodium tube, Powered
+  suffix: Powered, Sodium Orange
   parent: Poweredlight
   components:
   - type: PoweredLight
@@ -165,7 +166,7 @@
 - type: entity
   parent: WallLight
   id: UnpoweredLightSodium
-  suffix: Unpowered, Sodium
+  suffix: Unpowered, Sodium Orange
   components:
   - type: PointLight
     radius: 10
@@ -217,7 +218,7 @@
   name: small light
   description: "A light fixture. Draws power and produces light when equipped with a light bulb."
   id: PoweredSmallLightEmpty
-  suffix: Empty, Powered
+  suffix: Powered, Empty
   parent: SmallLight
   components:
   - type: Sprite
