Unique name identifiers (#6697)

--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -63,6 +63,8 @@
       - id: PowerDrill
       - id: JawsOfLife
       - id: WelderExperimental
+  - type: NameIdentifier
+    group: Drone
   - type: GhostTakeoverAvailable
     makeSentient: true
     name: Maintenance Drone
