--- a/Resources/Prototypes/Entities/Structures/Windows/window.yml
+++ b/Resources/Prototypes/Entities/Structures/Windows/window.yml
@@ -8,6 +8,8 @@
     snap:
     - Window
   components:
+  - type: WallMount
+    arc: 360 # interact despite grilles
   - type: Tag
     tags:
       - RCDDeconstructWhitelist
@@ -92,6 +94,8 @@
     snap:
     - Window
   components:
+  - type: WallMount
+    arc: 360 # interact despite grilles
     # Attention! If adding tags here:
     # Keep WindowTintedDirectional in mind
   - type: Tag
