Remove spaces from Decorated Fir Tree entity id (#6757)

--- a/Resources/Maps/bagel.yml
+++ b/Resources/Maps/bagel.yml
@@ -81422,7 +81422,7 @@ entities:
   - canCollide: False
     type: Physics
 - uid: 6196
-  type: Decorated Fir Tree
+  type: DecoratedFirTree
   components:
   - pos: -16.5,-29.5
     parent: 41
