--- a/Resources/Prototypes/Entities/Mobs/Species/human.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/human.yml
@@ -44,16 +44,19 @@
       types:
         Blunt: 2
   # Organs
-  - type: SolutionContainerManager
-    solutions:
-      bloodstream:
-        maxVol: 250
   - type: InjectableSolution
-    solution: bloodstream
+    solution: chemicals
   - type: DrawableSolution
     solution: bloodstream
   - type: Bloodstream
-    max_volume: 100
+    bloodlossDamage:
+      types:
+        Bloodloss:
+          1
+    bloodlossHealDamage:
+      types:
+        Bloodloss:
+          -0.25
   - type: StatusEffects
     allowed:
     - Stun
