--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/healing.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/healing.yml
@@ -39,6 +39,7 @@
     damage:
       groups:
         Brute: -15 # 5 for each type in the group
+    bloodlossModifier: -3 # a little bit of bloodloss healing.
   - type: Stack
     stackType: Brutepack
 
@@ -57,8 +58,9 @@
     damageContainer: Biological
     damage:
       types:
-        Slash: -5
-        Piercing: -5
+        Slash: -2.5
+        Piercing: -2.5
+    bloodlossModifier: -10
   - type: Stack
     stackType: Gauze
 
