--- a/Resources/Prototypes/Reagents/elements.yml
+++ b/Resources/Prototypes/Reagents/elements.yml
@@ -105,6 +105,12 @@
   color: "#434b4d"
   boilingPoint: 2862.0
   meltingPoint: 1538.0
+  metabolisms:
+    Medicine:
+      effects:
+      - !type:ModifyBloodLevel
+        scaled: true # scales 2x with the amount of iron you consume
+        amount: 2
 
 - type: reagent
   id: Lithium
