Vitamins, Protein, new reagents for almost every food, new recipes (#6607)

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -148,7 +148,9 @@
         maxVol: 6
         reagents:
         - ReagentId: Nutriment
-          Quantity: 5
+          Quantity: 4
+        - ReagentId: Vitamin
+          Quantity: 2
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/banana.rsi
   - type: Produce
@@ -207,10 +209,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 6
+        maxVol: 9
         reagents:
         - ReagentId: Nutriment
           Quantity: 5
+        - ReagentId: Vitamin
+          Quantity: 4
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/carrot.rsi
   - type: Produce
@@ -230,10 +234,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 6
+        maxVol: 9
         reagents:
         - ReagentId: Nutriment
           Quantity: 5
+        - ReagentId: Vitamin
+          Quantity: 4
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/lemon.rsi
   - type: Produce
@@ -253,10 +259,14 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 6
+        maxVol: 16
         reagents:
         - ReagentId: Nutriment
-          Quantity: 5
+          Quantity: 10
+        - ReagentId: Vitamin
+          Quantity: 2
+        - ReagentId: Water
+          Quantity: 4
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/pineapple.rsi
   - type: Produce
@@ -279,9 +289,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
+        maxVol: 14
         reagents:
         - ReagentId: Nutriment
-          Quantity: 5
+          Quantity: 10
+        - ReagentId: Vitamin
+          Quantity: 4
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/potato.rsi
   - type: Produce
@@ -301,9 +314,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
+        maxVol: 14
         reagents:
         - ReagentId: Nutriment
-          Quantity: 5
+          Quantity: 10
+        - ReagentId: Vitamin
+          Quantity: 4
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/tomato.rsi
   - type: Produce
@@ -379,9 +395,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
+        maxVol: 14
         reagents:
         - ReagentId: Nutriment
-          Quantity: 5
+          Quantity: 10
+        - ReagentId: Vitamin
+          Quantity: 4
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/eggplant.rsi
   - type: Produce
@@ -396,10 +415,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 6
+        maxVol: 14
         reagents:
         - ReagentId: Nutriment
-          Quantity: 5
+          Quantity: 10
+        - ReagentId: Vitamin
+          Quantity: 4
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/apple.rsi
   - type: Produce
@@ -421,10 +442,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 6
+        maxVol: 14
         reagents:
         - ReagentId: Nutriment
-          Quantity: 5
+          Quantity: 10
+        - ReagentId: Vitamin
+          Quantity: 4
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/corn.rsi
   - type: Produce
@@ -459,9 +482,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
+        maxVol: 14
         reagents:
         - ReagentId: Nutriment
-          Quantity: 5
+          Quantity: 10
+        - ReagentId: Vitamin
+          Quantity: 4
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/onion.rsi
   - type: Produce
@@ -479,9 +505,12 @@
   - type: SolutionContainerManager
     solutions:
       food:
+        maxVol: 14
         reagents:
         - ReagentId: Nutriment
-          Quantity: 5
+          Quantity: 10
+        - ReagentId: Vitamin
+          Quantity: 4
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/onion_red.rsi
   - type: Produce
@@ -568,11 +597,14 @@
     - type: SolutionContainerManager
       solutions:
         food:
+          maxVol: 18
           reagents:
             - ReagentId: Nutriment
-              Quantity: 5
+              Quantity: 4
             - ReagentId: CapsaicinOil
-              Quantity: 1
+              Quantity: 10
+            - ReagentId: Vitamin
+              Quantity: 4
     - type: Sprite
       sprite: Objects/Specific/Hydroponics/chili.rsi
     - type: Produce
@@ -653,7 +685,7 @@
   - type: SolutionContainerManager
     solutions:
       food:
-        maxVol: 24
+        maxVol: 26
         reagents:
         - ReagentId: Bicaridine
           Quantity: 10
@@ -662,6 +694,8 @@
         - ReagentId: Nutriment
           Quantity: 2
         - ReagentId: Desoxyephedrine
+          Quantity: 2
+        - ReagentId: Vitamin
           Quantity: 2
   - type: Sprite
     sprite: Objects/Specific/Hydroponics/ambrosia_vulgaris.rsi
