--- a/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/silicon.yml
@@ -65,6 +65,13 @@
       - id: WelderExperimental
   - type: NameIdentifier
     group: Drone
+  - type: Inventory
+    templateId: drone
+  - type: Strippable
+  - type: UserInterface
+    interfaces:
+    - key: enum.StrippingUiKey.Key
+      type: StrippableBoundUserInterface
   - type: GhostTakeoverAvailable
     makeSentient: true
     name: Maintenance Drone
@@ -87,6 +94,8 @@
     layers:
     - state: shell
       sprite: Mobs/Silicon/drone.rsi
+    - map: [ "head" ]
+      offset: 0, -0.45
   - type: MovementIgnoreGravity
   - type: Fixtures
     fixtures:
