Health examine button (#6749)
* Health examine button

* better icon

* ignore

* better icon + some reviews

* fix thing

--- a/Resources/Prototypes/Entities/Mobs/Species/human.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/human.yml
@@ -48,6 +48,13 @@
     solution: chemicals
   - type: DrawableSolution
     solution: bloodstream
+  - type: HealthExaminable
+    examinableTypes:
+    - Blunt
+    - Slash
+    - Piercing
+    - Heat
+    - Shock
   - type: Bloodstream
     bloodlossDamage:
       types:
