--- a/Resources/Prototypes/Entities/Mobs/NPCs/xeno.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/xeno.yml
@@ -9,6 +9,10 @@
     behaviorSets:
     - Idle
     - UnarmedAttackHostiles
+  - type: Reactive
+    groups:
+      Flammable: [Touch]
+      Extinguish: [Touch]
   - type: AiFactionTag
     factions:
     - Xeno
@@ -46,6 +50,16 @@
     damageRecovery:
       types:
         Asphyxiation: -1.5
+  - type: Bloodstream
+    bloodReagent: FluorosulfuricAcid
+    bloodlossDamage:
+      types:
+        Bloodloss:
+          1
+    bloodlossHealDamage:
+      types:
+        Bloodloss:
+          -0.25
   - type: UnarmedCombat
     range: 1.5
     arcwidth: 0
