--- a/Resources/Prototypes/Entities/Mobs/NPCs/xeno.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/xeno.yml
@@ -76,5 +76,6 @@
       dead: dead
   - type: Puller
   - type: Butcherable
-    meat: FoodMeatXeno
+    spawned: FoodMeatXeno
+    butcheringType: Spike
     pieces: 5
