--- a/Resources/Prototypes/Entities/Effects/puddle.yml
+++ b/Resources/Prototypes/Entities/Effects/puddle.yml
@@ -100,6 +100,7 @@
     netsync: false
   - type: Puddle
     slipThreshold: 20
+    overflowVolume: 50
   - type: Evaporation
     evaporateTime: 400 # very slow
   - type: Appearance
