--- a/Resources/Prototypes/Entities/Mobs/Species/slime.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/slime.yml
@@ -135,7 +135,8 @@
           messages: [ "slime-hurt-by-water-popup" ]
           probability: 0.25
     - type: Butcherable
-      meat: FoodMeatSlime
+      butcheringType: Spike
+      spawned: FoodMeatSlime
 
 - type: entity
   save: false
