Remove Reach from the map rotation (#6769)

--- a/Resources/Prototypes/Maps/game.yml
+++ b/Resources/Prototypes/Maps/game.yml
@@ -144,6 +144,7 @@
   mapPath: /Maps/ssreach.yml
   minPlayers: 0
   maxPlayers: 15
+  votable: false
   overflowJobs:
     - Assistant
   availableJobs:
