--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -654,6 +654,8 @@
     tags:
     - Trash
   - type: Recyclable
+  - type: Actions # TODO: Remove CombatMode when Prototype Composition is added
+    innateActions: []
 
 
 - type: entity
