--- a/Resources/Prototypes/Entities/Structures/Wallmounts/Signs/posters.yml
+++ b/Resources/Prototypes/Entities/Structures/Wallmounts/Signs/posters.yml
@@ -159,7 +159,7 @@
 
 - type: entity
   parent: PosterBase
-  id: PosterContrabandDonutCorp.
+  id: PosterContrabandDonutCorp
   name: "Donut Corp."
   description: "This poster is an unauthorized advertisement for Donut Corp."
   components:
@@ -168,7 +168,7 @@
 
 - type: entity
   parent: PosterBase
-  id: PosterContrabandEAT.
+  id: PosterContrabandEAT
   name: "EAT."
   description: "This poster promotes rank gluttony."
   components:
